objects/ASI_CRM_Discount_Pool_List__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Division_Code__c</fullName>
        <label>Division Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CRM_Code__c</fullName>
        <formula>ASI_CRM_Customer_Name__r.ASI_CRM_CN_CRM_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Name</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Discount Pool Lists</relationshipLabel>
        <relationshipName>Discount_Pool_Lists</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_GL_Account__c</fullName>
        <label>GL Account</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pool_Type__c</fullName>
        <label>Pool Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CASH</fullName>
                </value>
                <value>
                    <fullName>DISCOUNT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Region__c</fullName>
        <formula>ASI_CRM_Customer_Name__r.ASI_CRM_CN_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <label>Discount Pool List</label>
    <listViews>
        <fullName>ASI_CRM_CN_Discount_Pool_List</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Region__c</columns>
        <columns>ASI_CRM_CN_Division_Code__c</columns>
        <columns>ASI_CRM_CRM_Code__c</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_Pool_Type__c</columns>
        <columns>ASI_CRM_GL_Account__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>CN Discount Pool List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ASI_CRM_CRM_Code__c</columns>
        <columns>ASI_CRM_Customer_Name__c</columns>
        <columns>ASI_CRM_Pool_Type__c</columns>
        <columns>ASI_CRM_GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Pool Lists</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Discount_Pool_List</fullName>
        <active>true</active>
        <label>ASI_CRM_CN_Discount_Pool_List</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>